[package]
name = "objld"
version = "0.2.0"
authors = ["Error1000 <udreadanmihai@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1.*"
rayon = "1.5.*"

[profile.release]
opt-level = 3
debug = false
lto = true
overflow-checks = false

[profile.dev]
opt-level = 3
debug = true

[profile.bench]
opt-level = 3
debug = false