[package]
name = "objld"
version = "0.5.0"
authors = ["Error1000 <udreadanmihai@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Error1000/objld"
description = "Parse and load .obj files with line-level parallelism, fast."
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1.*"
rayon = "1.5.*"

[profile.release]
opt-level = 3
debug = false
lto = true
overflow-checks = false

[profile.dev]
opt-level = 3
debug = true

[profile.bench]
opt-level = 3
debug = false